# dev_django

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  E2E_TESTING_README.md  FACTORY_USAGE.md  GUARDIAN_README.md  README.md  deploy.sh  ecs-task-definition.json  gunicorn.conf.py  manage.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_e2e_tests.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy-improved.yml  deploy.yml
apps/: __init__.py
apps/accounts/: apps.py  test_e2e_password_reset.py  urls.py  utils.py  views.py
apps/diary/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/diary/migrations/: 0001_initial.py  0002_alter_diaryentry_author.py
apps/saml/: apps.py  urls.py  views.py
apps/todos/: README_FACTORY.md  admin.py  apps.py  factories.py  forms.py  guardian_views.py  models.py  role_views.py  test_e2e_playwright.py  tests.py  urls.py  validators.py  views.py
apps/todos/migrations/: 0001_initial.py  0002_todo_user.py  (+3 more)
cloudformation/: alb-ssm.yaml  deploy-cloudformation.sh  ecs.yaml  main.yaml  parameters.json  security-rds.yaml
config/: __init__.py  asgi.py  settings.py  settings_production.py  test_settings.py  urls.py  wsgi.py
deploy/: README.md  ROLLBACK_README.md  deploy-with-rollback.sh  deploy.sh  health-check.sh  nginx.conf  server_setup.sh  setup-rollback-system.sh
deploy/systemd/: diary-gunicorn.service
diary/: admin.py  conftest.py  factories.py  forms.py  models.py  test_factories.py  tests.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_diaryentry_author.py  0003_alter_diaryentry_updated_at.py  0004_alter_diaryentry_content_diarycomment.py  0005_alter_diaryentry_author.py
saml/: metadata.xml  settings.json
saml/certs/: sp.crt  sp.key
sampleapp/: views.py
templates/: base.html
templates/diary/: diary_confirm_delete.html  diary_detail.html  diary_form.html  diary_list.html
(+34 files in other folders)
